--- a/wordpress/wp-content/plugins/custom-stuff/assets/css/style.css
+++ b/wordpress/wp-content/plugins/custom-stuff/assets/css/style.css
@@ -2,4 +2,4 @@
 ------------------------------------------------------------------
 	Author: Adria Murphy
 	Author URI: https://github.com/displaycoffee
-------------------------------------------------------------------*/
+------------------------------------------------------------------*/.cstmstff-plugin-admin .form-field .form-field-label label{padding:0;color:#23282d;font-weight:600;background:#ff00ff}.cstmstff-plugin-admin .form-field .form-field-label label input{font-weight:400}
