--- a/wordpress/_dev/plugins/custom-stuff/assets/sass/imports/_responsive.scss
+++ b/wordpress/_dev/plugins/custom-stuff/assets/sass/imports/_responsive.scss
@@ -1,75 +1,70 @@
-// /* 1219 Breakpoint
-// ============================================== */
-//
-// @include respond(1219px) {
-// 	body[class*='#{$prefix}'] {
-// 		#{$ff} {
-// 			#{$ff}-row #{$ff}-column, &#{$ff}-text #{$ff}-row #{$ff}-column {
-// 				width: 50%;
-// 			}
-// 		}
-// 		#{$ff}-date #{$ff}-value #{$ff}-row {
-// 			#{$ff}-column {
-// 				width: 33.33%;
-// 			}
-// 			.date-field-month, .date-field-day, .date-field-year {
-// 				width: 100%;
-// 			}
-// 		}
-// 		#poststuff .postbox #{$ff}:not(#{$ff}-column) > #{$ff}-label {
-// 			flex: 0 0 150px;
-// 		}
-// 	}
-// }
-//
-// /* 782 Breakpoint
-// ============================================== */
-//
-// @include respond(782px) {
-// 	body[class*='#{$prefix}'] {
-// 		#{$ff}-date #{$ff}-value #{$ff}-row #{$ff}-column, #{$ff}-media #{$ff}-value #{$ff}-row #{$ff}-button {
-// 			width: 50%;
-// 		}
-// 		#{$ff} #{$ff}-row #{$ff}-column, #{$ff}#{$ff}-text #{$ff}-row #{$ff}-column, #{$ff}-date #{$ff}-value #{$ff}-row #{$ff}-select, #{$ff} #{$wp}-container, #{$ff}-media #{$ff}-value #{$ff}-row #{$ff}-button .button {
-// 			width: 100%;
-// 		}
-// 		.form-table tr {
-// 			th {
-// 				padding: 0 0 10px 0;
-// 			}
-// 			td {
-// 				padding: 0 0 20px 0;
-// 			}
-// 		}
-// 		#{$ff}#{$ff}-checkbox #{$ff}-row #{$ff}-column {
-// 			#{$ff}-label, #{$ff}-value {
-// 				min-height: 25px;
-// 			}
-// 		}
-// 		#{$ff} #{$wp}-container {
-// 			.wp-color-result {
-// 				padding-left: 33.33%;
-// 			}
-// 			#{$wp}-input-wrap .button {
-// 				line-height: 2.18181818;
-// 				padding: 0 8px;
-// 				font-size: 11px;
-// 			}
-// 		}
-// 		#{$ff}-media #{$ff}-value #{$ff}-row {
-// 			flex-wrap: wrap;
-// 			#{$ff}-column {
-// 				min-width: 1px;
-// 			}
-// 			#{$ff}-url {
-// 				flex: 1 1 100%;
-// 			}
-// 		}
-// 		#poststuff .postbox #{$ff}:not(#{$ff}-column) {
-// 			display: block;
-// 			& > #{$ff}-label {
-// 				margin: 0 0 10px 0;
-// 			}
-// 		}
-// 	}
-// }
+/* 1219 Breakpoint
+============================================== */
+
+@include respond(1219px) {
+	#{$admin} {
+		#{$field}-text #{$row} #{$column}, #{$field}-checkbox #{$row} #{$column} {
+			width: 50%;
+		}
+	}
+}
+
+/* 782 Breakpoint
+============================================== */
+
+@include respond(782px) {
+	#{$admin} {
+		#{$field}-date #{$value} #{$row} #{$column}, #{$field}-media #{$value} #{$row} #{$field}-button {
+			width: 50%;
+		}
+		#{$field}-text #{$row} #{$column}, #{$field}-checkbox #{$row} #{$column}, #{$field}-date #{$value} #{$row} #{$field}-select, #{$wpc}, #{$field}-media #{$value} #{$row} #{$field}-button .button {
+			width: 100%;
+		}
+		#{$field}-radio #{$value}, #{$field}-checkbox #{$row} {
+			padding-top: 5px !important;
+		}
+		#{$field}:not(#{$column}) > #{$label} label {
+			font-size: 16px;
+		}
+		#{$table} {
+			#{$field}:not(#{$column}) {
+				& > #{$label}, & > #{$value} {
+					padding: 0;
+				}
+				& > #{$value} {
+					margin: 0 0 20px 0;
+				}
+			}
+		}
+		#{$field}-checkbox #{$row} #{$column} {
+			#{$label}, #{$value} {
+				min-height: 25px;
+			}
+		}
+		#{$wpc} {
+			.wp-color-result {
+				padding-left: 33.33%;
+			}
+			#{$wp}-input-wrap .button {
+				line-height: 30px;
+				padding: 0 8px;
+				font-size: 11px;
+			}
+			#{$wp}-holder .iris-picker {
+				margin: 14px 0 0 0;
+			}
+		}
+		#{$field}-media #{$value} #{$row} {
+			flex-wrap: wrap;
+			#{$column} {
+				min-width: 1px;
+			}
+			#{$field}-url {
+				flex: 1 1 100%;
+			}
+		}
+		#poststuff .postbox #{$field}:not(#{$column}) {
+			display: block;
+		}
+	}
+}
