Work on styles and base layout

--- a/wordpress/_dev/themes/dcbase/assets/sass/compressed/style.scss
+++ b/wordpress/_dev/themes/dcbase/assets/sass/compressed/style.scss
@@ -12,21 +12,16 @@
 	Text Domain: dcbase
 ------------------------------------------------------------------*/
 
-// // Helpers
-// @import '../imports/variables';
-// @import '../imports/colors';
-// @import '../imports/mixins';
-//
-// // Vendor
-// @import '../imports/normalize';
-//
-// // Everything else
-// @import '../imports/base';
-// @import '../imports/typography';
-// @import '../imports/icons-fa';
-// @import '../imports/icons-rpg';
-// @import '../imports/form-fields';
-// @import '../imports/layout';
+// Helpers
+@import '../imports/variables';
+@import '../imports/colors';
+@import '../imports/mixins';
+
+// Everything else
+@import '../imports/base';
+@import '../imports/typography';
+@import '../imports/form-fields';
+@import '../imports/layout';
 // @import '../imports/profile';
 // @import '../imports/viewlisting';
 // @import '../imports/viewtopic';
