--- a/wordpress/_dev/themes/dcbase/assets/sass/imports/_form-fields.scss
+++ b/wordpress/_dev/themes/dcbase/assets/sass/imports/_form-fields.scss
@@ -2,310 +2,117 @@
 ============================================== */
 
 @include placeholder {
-	color: $dark-01;
-	@include transition(color 0.3s ease-in-out);
+	transition: color 0.3s ease-in-out;
+	color: $color-00;
 }
 
 :focus{@include placeholder {
-	color: $dark-01;
+	color: $color-00;
 }}
 
-fieldset {
-	padding: 0;
-	margin: 0;
-	border: 0;
+::-webkit-file-upload-button {
+	-webkit-appearance: button;
+	font: inherit;
 }
 
-.inputbox, input[type='search'], textarea, select {
+optgroup, select, textarea, #{$button-fields}, #{$input-fields} {
+	font-family: inherit;
+	font-size: 100%;
+}
+
+select, textarea, #{$input-fields} {
 	appearance: none;
+	border: 1px solid $color-00;
+	width: 100%;
+	min-height: 40px;
+	padding: 10px;
+	line-height: 1.35;
 }
 
 .ios {
-	.inputbox, input[type='search'], textarea, select {
+	select, textarea, #{$input-fields} {
 		font-size: 16px;
 	}
 }
 
-.inputbox, textarea, select, .button, .button1, .button2 {
-	border: 0;
-	border-radius: 3px;
-	line-height: 1.45;
+select, #{$button-fields} {
+	text-transform: none;
 }
 
-.inputbox, textarea, select {
-	background: $light-04;
-	color: $color-06;
-	width: 100%;
-	padding: 10px;
-	margin: 0 0 20px 0;
-}
-
-.inputbox, select {
-	min-height: 40px;
+#{$button-fields}, #{$input-fields} {
+	border-radius: 0;
 }
 
 select {
-	padding-right: 30px;
+	padding-right: 60px;
 	background-image: url($images + 'angle-down.svg');
 	background-repeat: no-repeat;
 	background-position: right 16px center;
 	background-size: auto 16px;
-	option {
-		color: $color-06;
+	option[disabled] {
+		color: $dark-00;
 	}
 }
 
-textarea {
-	display: block;
-}
-
-.section-memberlist-send-email #message {
-	height: auto !important;
-}
-
-input[type='checkbox'], input[type='radio']  {
+#{$check-fields} {
 	@include position($type: relative, $top: 2px);
-	&[disabled] {
+}
+
+[type='number'] {
+	&::-webkit-inner-spin-button, &::-webkit-outer-spin-button {
+		height: auto;
+	}
+}
+
+[type='search'] {
+	-webkit-appearance: textfield;
+	outline-offset: -2px;
+	&::-webkit-search-decoration, &::-webkit-search-results-button, &::-webkit-search-results-decoration {
+		display: none;
+	}
+	&::-webkit-search-cancel-button, &::-webkit-search-decoration {
+		-webkit-appearance: none;
+	}
+	&::-webkit-search-cancel-button {
+		cursor: pointer;
+	}
+}
+
+[disabled] {
+	&, &:hover {
 		opacity: 0.5;
+		cursor: not-allowed;
+		background: inherit;
 	}
 }
 
 label {
-	display: block;
-	margin: 0 0 $ffs 0;
-	input[type='checkbox'], input[type='radio'], input[type='number'].inputbox {
-		margin-right: $ffs-half;
-	}
+	margin: 0 0 5px 0;
 }
 
-button, html input, option, select, textarea {
-	&[disabled] {
-		cursor: not-allowed;
-	}
-}
-
-html input, select, textarea {
-	&[disabled] {
-		color: map-get($color-set-11, dark-00);
-		background: $color-11;
-	}
-}
-
-option[disabled] {
-	color: $color-11;
-}
-
-button[disabled] {
-	opacity: 0.5;
-	&:hover {
-		background: $color-05;
-	}
-}
-
-input[type='search']::-webkit-search-decoration, input[type='search']::-webkit-search-results-button, input[type='search']::-webkit-search-results-decoration {
-	display: none;
-}
-
-input[type='search']::-webkit-search-cancel-button {
-	cursor: pointer;
-}
-
-/* Search Box
-============================================== */
-
-.search-box form fieldset {
-	position: relative;
-	padding: 0 75px 0 0;
-	background: $light-04;
-	border-radius: 3px;
-	input[type='search'] {
-		margin: 0;
-	}
-	.button {
-		background: transparent;
-		@include sizing(20px, 20px);
-		font-size: rem(16px);
-		line-height: 1;
-		@include position($type: absolute, $top: 0, $bottom: 0, $right: 10px, $z: 1);
-		margin: auto;
-		padding: 2px;
-		.icon {
-			width: auto;
-			font-size: inherit;
-			line-height: 0;
-			color: $color-10;
-			@include transition(color 0.3s ease-in-out);
-		}
-		&:hover .icon {
-			color: $color-11;
-		}
-	}
-	button.button {
-		right: 45px;
-	}
+progress {
+	vertical-align: baseline;
 }
 
 /* Buttons
 ============================================== */
 
-.button, .button1, .button2 {
-	display: inline-block;
-	background: $color-05;
-	color: $light-05;
+#{$button-fields} {
+	padding: 13px 10px;
+	line-height: 1;
+	-webkit-appearance: button;
+	cursor: pointer;
+	background: $color-00;
+	color: $color-01;
 	text-align: center;
-	@include transition(background 0.3s ease-in-out);
-	padding: 10px 20px;
+	transition: color 0.3s ease-in-out;
 	&:hover {
-		background: $color-01;
-		&, .icon {
-			color: $light-05;
-		}
+		background: $dark-01;
 	}
-}
-
-.button-icon-only, .mcp-main .postbody .post-buttons .button {
-	@include small-form-ele($padding: 5px);
-}
-
-.format-buttons {
-	button:not(.button-icon-only), select  {
-		font-size: rem(13px);
-		@include small-form-ele($padding: 6px 10px);
+	&::-moz-focus-inner {
+		border: 0;
 	}
-	button:not(.button-icon-only) {
-		text-transform: uppercase;
+	&:-moz-focusring {
+		outline: 1px dotted ButtonText;
 	}
-	select {
-		min-height: 0;
-		width: auto;
-		padding-right: 30px;
-	}
-}
-
-fieldset.submit-buttons {
-	text-align: center;
-	margin: 0 0 $ffs-minus 0;
-	.button, .button1, .button2 {
-		margin-bottom: $ffs;
-	}
-}
-
-.button-link {
-	padding: 0;
-	border: 0;
-	outline: none;
-	background: none;
-	color: $color-04;
-	@include transition(color 0.3s ease-in-out);
-	&:hover {
-		color: $color-03;
-	}
-}
-
-/* Fieldset - DL
-============================================== */
-
-fieldset:not(.polls) {
-	dl:not(.pmlist) {
-		// Always keep clearfix to account for weird margin collapse spacing
-		@include clearfix('&');
-		margin: 0 -10px 20px -10px;
-		.inputbox, textarea, select, label {
-			margin: 0;
-		}
-		dt, dd {
-			padding: 0 10px;
-		}
-		dt {
-			float: left;
-			width: $ffi-01;
-			label {
-				& + br {
-					display: none;
-				}
-				& ~ span {
-					font-style: italic;
-					font-size: rem(13px);
-					display: block;
-				}
-			}
-		}
-		dd {
-			margin: 0 0 $ffs $ffi-01;
-			label {
-				display: inline-block;
-			}
-			&:last-child {
-				margin-bottom: 0;
-			}
-			&.has-multiple-fields {
-				@include clearfix('&');
-				margin-top: -($ffs);
-				padding: 0 (10 - $ffs-half);
-				@include flex-flow(row wrap);
-				align-items: center;
-				& > * {
-					@include flex;
-					margin: $ffs $ffs-half 0 $ffs-half;
-				}
-				& > {
-					a {
-						display: inline-block;
-					}
-					.inputbox, select {
-						@include flex(base);
-					}
-				}
-				& > label[for*='icon'] {
-					line-height: 32px;
-					img {
-						@include position($type: relative, $top: 4px);
-						margin: 0 $ffs;
-					}
-				}
-				.has-radio-button {
-					padding: 0 5px 0 0;
-				}
-			}
-			&#tz_select_date {
-				display: flex !important;
-			}
-		}
-	}
-	&.fields1 dl:not(.pmlist) {
-		dt {
-			width: $ffi-02;
-		}
-		dd {
-			margin-left: $ffi-02;
-		}
-	}
-}
-
-.section-search form[data-focus='keywords'] fieldset,
-.section-ucp-send-password fieldset,
-.section-ucp-send-activation-email fieldset,
-.cp-main #avatar_option_avatar_driver_remote fieldset,
-.cp-main #avatar_option_avatar_driver_gravatar fieldset,
-.section-ucp-manage-groups .cp-main fieldset,
-.section-mcp-view-topic .cp-main #display-panel {
-	dl dd.has-multiple-fields.has-space {
-		@include reset-font-size('& > *');
-	}
-}
-
-.section-mcp-warnings .cp-main #warning ~, [class*='section-ucp-send-'] fieldset, [class*='section-mcp-approve-'] fieldset, [class*='section-mcp-restore-'] fieldset {
-	dl dt.empty-space {
-		display: none;
-		& + dd {
-			margin-left: 0;
-		}
-	}
-}
-
-/* Auto Width Form Elements
-============================================== */
-
-input[type='number'].inputbox {
-	width: auto;
 }
