--- a/wordpress/_dev/themes/dcbase/assets/sass/imports/_mixins.scss
+++ b/wordpress/_dev/themes/dcbase/assets/sass/imports/_mixins.scss
@@ -1,67 +1,16 @@
-// Also includes functions in addition to mixins
-
-// Black transparent bar
-@mixin black-bar($t, $l, $r) {
-	@include position($type: absolute, $top: $t, $left: $l, $right: $r);
-	height: 50px;
-	line-height: 50px;
-	padding: 0 20px;
-	background: map-get($dark-set, dark-07);
-}
+// Mixins
+// ============================================== //
 
 // Clearfix
 @mixin clearfix($selector) {
 	#{$selector}:before, #{$selector}:after {
 		content: '';
 		display: table;
-		zoom: 1;
 	}
 	#{$selector}:after {
 		clear: both;
+		zoom: 1;
 	}
-}
-
-// For hiding / showing content
-@mixin toggle-content($state, $transition: '') {
-	@if $state == hide {
-		opacity: 0;
-		visibility: hidden;
-	}
-	@if $state == show {
-		visibility: visible;
-		opacity: 1;
-	}
-	@if ($transition == true) {
-		@include transition(opacity 0.5s ease);
-	}
-}
-
-// PX to EM conversion
-// From https://css-tricks.com/snippets/sass/px-to-em-functions
-@function em($pixels, $context: $base-font-size) {
-	@if (unitless($pixels)) {
-		$pixels: $pixels * 1px;
-	}
-
-	@if (unitless($context)) {
-		$context: $context * 1px;
-	}
-
-	@return $pixels / $context * 1em;
-}
-
-// PX to REM conversion
-// Modified from https://css-tricks.com/snippets/sass/px-to-em-functions
-@function rem($pixels, $context: $base-font-size) {
-	@if (unitless($pixels)) {
-		$pixels: $pixels * 1px;
-	}
-
-	@if (unitless($context)) {
-		$context: $context * 1px;
-	}
-
-	@return $pixels / $context * 1rem;
 }
 
 // Set text overflow with ellipsis
@@ -109,26 +58,18 @@
 	}
 }
 
-// Icon properties for forum/topic listing
-@mixin forum-icon($icon) {
-	dt:before {
-		content: unicode($icon);
+// For setting bottom padding as height
+@mixin fluid-sizing($bottom: '') {
+	@if $bottom != '' {
+		height: 0;
+		padding-bottom: $bottom;
+		overflow: hidden;
 	}
 }
 
 // FontAwesome properties
-@mixin icon-font($family: '', $fs: '', $lh: '') {
-	// Font family logic
-	@if ($family != '') {
-		@if ($family == 'game') {
-			$family: 'Khyeras Icons';
-		} @else {
-			$family: $family;
-		}
-	} @else {
-		$family: 'FontAwesome';
-	}
-
+@mixin icon-font($fs: '', $lh: '') {
+	$family: 'FontAwesome';
 	display: inline-block;
 	font-family: $family;
 	font-weight: normal;
@@ -158,9 +99,26 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+// Image base properties
+@mixin image-base {
+	max-width: 100%;
+	max-height: 100%;
+	@include sizing(auto, auto);
+	border: 0;
+	margin: auto;
+	display: block;
+}
+
+// Image centered position properties
+@mixin image-centered {
+	@include position($type: absolute, $top: 0, $bottom: 0, $right: 0, $left: 0);
+}
+
 // Inline block
 @mixin inline-block($vertical-align) {
 	display: inline-block;
+	zoom: 1;
+	*display: inline;
 	vertical-align: $vertical-align;
 }
 
@@ -171,14 +129,6 @@
 	&:-moz-placeholder           {@content}
 	&::-moz-placeholder          {@content}
 	&:-ms-input-placeholder      {@content}
-}
-
-// Quote characters
-@mixin quotes($fs) {
-	font-size: rem($fs);
-	@include inline-block(middle);
-	@include sizing(12px, 12px);
-	line-height: 1.2;
 }
 
 // Mixin for positioning
@@ -203,31 +153,16 @@
 	}
 }
 
-// Reset font sizing for responsive button spacing
-@mixin reset-font-size($selector) {
-	font-size: 0;
-	#{$selector} {
-		font-size: rem($global-font-size);
-	}
-}
-
-// Reset inner element styling
-@mixin reset-inner {
-	background: none;
-	margin: 0;
-	padding: 0;
-}
-
 // Responsive max-width media query
-@mixin respond($breakpoint) {
-	@media only screen and (max-width: $breakpoint) {
-		@content;
+@mixin respond($breakpoint, $type: '') {
+	@if index('px' 'cm' 'mm' 'in' 'pt' 'pc' 'dpi' 'dpcm' 'dppx' 'em' 'ex' 'rem' '%' 'vw' 'vh' 'vmin' 'vmax', unit($breakpoint)) == null {
+		$breakpoint: $breakpoint + 'px';
 	}
-}
-
-// Responsive min-width media query
-@mixin respond-min($breakpoint) {
-	@media only screen and (min-width: $breakpoint) {
+	$type: max-width;
+	@if ($type == min-width) {
+		$type: min-width;
+	}
+	@media only screen and ($type: $breakpoint) {
 		@content;
 	}
 }
@@ -238,67 +173,18 @@
 	height: $height;
 }
 
-// Smaller sized form elements
-@mixin small-form-ele($padding: 5px 10px, $lh: '') {
-	padding: $padding;
-	@if ($lh != false) {
-		line-height: 1;
+// For hiding / showing content
+@mixin toggle-content($state, $transition: '') {
+	@if $state == hide {
+		opacity: 0;
+		visibility: hidden;
 	}
-}
-
-// Sortable headers
-@mixin sortable-headers {
-	a {
-		&[href*='sd='] {
-			position: relative;
-			padding: 0 20px 0 0;
-			&:after {
-				@include icon-font;
-				@include position($type: absolute, $top: 0, $right: 0);
-			}
-		}
-		&[href*='sd=d']:after {
-			content: unicode($icon-angle-down);
-		}
-		&[href*='sd=a']:after {
-			content: unicode($icon-angle-up);
-		}
+	@if $state == show {
+		visibility: visible;
+		opacity: 1;
 	}
-}
-
-// Common spectral font styles
-@mixin spectral-common($lh: '') {
-	@if ($lh != 'false') {
-		line-height: 1.1;
-	}
-	font-family: $font-02;
-	font-variant: small-caps;
-	font-weight: normal;
-}
-
-// Transition
-@mixin transition($value) {
-	-webkit-transition: $value;
-	-moz-transition: $value;
-	-o-transition: $value;
-	transition: $value;
-}
-
-// Scrollable ucp containers
-@mixin scrollable {
-	overflow: visible !important;
-	.scrollable-wrapper {
-		max-height: 380px;
-		overflow-x: hidden;
-		overflow-y: auto;
-		padding: 0 20px 0 0;
-	}
-	&[style*='max-height'][style*='none'] {
-		.scrollable-wrapper {
-			max-height: none;
-			overflow: visible;
-			padding: 0;
-		}
+	@if ($transition == true) {
+		@include transition(opacity 0.5s ease);
 	}
 }
 
@@ -312,6 +198,37 @@
 	clip: rect(0, 0, 0, 0);
 	white-space: nowrap;
 	border: 0;
+}
+
+// Functions
+// ============================================== //
+
+// PX to EM conversion
+// From https://css-tricks.com/snippets/sass/px-to-em-functions
+@function em($pixels, $context: $base-font-size) {
+	@if (unitless($pixels)) {
+		$pixels: $pixels * 1px;
+	}
+
+	@if (unitless($context)) {
+		$context: $context * 1px;
+	}
+
+	@return $pixels / $context * 1em;
+}
+
+// PX to REM conversion
+// Modified from https://css-tricks.com/snippets/sass/px-to-em-functions
+@function rem($pixels, $context: $base-font-size) {
+	@if (unitless($pixels)) {
+		$pixels: $pixels * 1px;
+	}
+
+	@if (unitless($context)) {
+		$context: $context * 1px;
+	}
+
+	@return $pixels / $context * 1rem;
 }
 
 // Unicode mixin
