Work on header, navigation, and fonts

--- a/wordpress/_dev/themes/dcbase/assets/sass/compressed/style.scss
+++ b/wordpress/_dev/themes/dcbase/assets/sass/compressed/style.scss
@@ -20,6 +20,7 @@
 // Everything else
 @import '../imports/base';
 @import '../imports/typography';
+@import '../imports/icons';
 @import '../imports/form-fields';
 @import '../imports/layout';
 // @import '../imports/profile';
@@ -28,7 +29,7 @@
 // @import '../imports/posting';
 // @import '../imports/other-sections';
 // @import '../imports/cp';
-// @import '../imports/header';
+@import '../imports/header';
 // @import '../imports/footer';
 // @import '../imports/responsive';
 
