--- a/wordpress/_dev/themes/dcbase/assets/sass/imports/_variables.scss
+++ b/wordpress/_dev/themes/dcbase/assets/sass/imports/_variables.scss
@@ -20,6 +20,7 @@ $font-02: Georgia, $serif-fb;
 
 $main-spacing: 20px;
 $mobile-menu-width: 300px;
+$form-field-height: 40px;
 $button-fields: "[type='button'], [type='reset'], [type='submit']";
 $check-fields: "[type='checkbox'], [type='radio']";
 $input-fields: "[type='number'], [type='search'], [type='text'], [type='url']";
