--- a/wordpress/_dev/themes/dcbase/assets/sass/imports/_typography.scss
+++ b/wordpress/_dev/themes/dcbase/assets/sass/imports/_typography.scss
@@ -2,12 +2,13 @@
 ============================================== */
 
 @font-face {
-	font-family: 'Font Family Name';
-	src: url($fonts + 'font-file.woff2') format('woff2'),
-		 url($fonts + 'font-file.woff') format('woff'),
-		 url($fonts + 'font-file.ttf') format('truetype');
+	font-family: 'DCBase Icons';
+	src: url($fonts + 'dcbase-icons.woff2') format('woff2'),
+		 url($fonts + 'dcbase-icons.woff') format('woff'),
+		 url($fonts + 'dcbase-icons.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
+	font-display: block;
 }
 
 /* General text elements
